# mini_super_joel_app

./: .env.example  .prettierignore  .prettierrc  LICENSE  README.md  index.html  package-lock.json  package.json  producto.html
backend/: seeder.js  server.js
backend/config/: db.js
backend/controllers/: orderController.js  productController.js  userController.js
backend/middleware/: authMiddleware.js  checkObjectId.js  errorMiddleware.js
backend/routes/: uploadRoutes.js
backend/utils/: calcPrices.js  generateToken.js  paypal.js
frontend/public/: index.html  manifest.json
frontend/src/components/: CheckoutSteps.jsx  Footer.jsx  (+4 more)
src/: App.jsx  index.css  main.jsx  producto.css  styles.css
src-api/: .env.example  .gitignore  Cargo.toml  seeder.js  server.js
src-api/data/: product.js  user.js
src-api/handlers/: orderHandler.js  productHandler.js  userHandler.js
src-api/middleware/: authMiddleware.js  errorMiddleware.js
src-api/models/: orderModel.js  productModel.js
src-api/routes/: orderRoutes.js  productRoutes.js  userRoutes.js
src-api/settings/: db.js
src-api/src/: errors.rs  main.rs  server.rs
src-api/src/db/: database.rs  mod.rs
src-api/src/routes/: status.rs
src-api/src/server/: server.rs
src-api/src/server/routes/: status.rs
src-api/src/utils/: env.rs
src-embed/: Cargo.toml
src-embed/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: Footer.jsx  FooterStyle.css  NavBar.jsx  NavBarStyle.css
src/routes/: routes.jsx
src/utils/: router.jsx
src/views/: About.jsx  Categories.jsx  Home.jsx  Shop.jsx
(+17 files in other folders)
