[package]
name = "src-embed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.18"
axum = "0.7.1"
serde_json = "1.0.108"
validator = "0.16.1"
surrealdb = "1.0.0"
dotenv = "0.15.0"
tokio = { version = "1.0.0", features = ["full"] }
serde = { version = "1.0.192", features = ["derive"] }
thiserror = "1.0.50"
